--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,25 @@
   --logo-button-color: #4d5ae5;
   --text-color: #434455;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
 .link {
   text-decoration: none;
 }
@@ -17,7 +36,38 @@ body {
   color: var(--text-color);
   background-color: #ffffff;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /*Хедер*/
+.container {
+  width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.page-header-container {
+  display: flex;
+  justify-content: space-between;
+}
+.page-navigation {
+  display: flex;
+  align-items: center;
+}
+.contacts-list {
+  display: flex;
+  column-gap: 40px;
+}
 .logo-second-word {
   color: var(--main-color);
   font-family: "Raleway", sans-serif;
@@ -38,6 +88,8 @@ body {
 }
 .page-header {
   background: #fff;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .menu-list {
   color: var(--main-color);
@@ -45,6 +97,9 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  display: flex;
+  column-gap: 40px;
+  margin-left: 76px;
 }
 .menu-link {
   color: var(--main-color);
@@ -70,6 +125,8 @@ body {
 /* Секція 1 */
 .big-board {
   background: var(--main-color);
+  line-height: 1.07;
+  padding: 188px 0;
 }
 .main-title {
   color: #fff;
@@ -78,6 +135,10 @@ body {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  padding-bottom: 48px;
+  width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .order-service {
   background: var(--logo-button-color);
@@ -86,12 +147,30 @@ body {
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.04em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
 }
 .order-service:hover,
 .order-service:focus {
   background-color: #404bbf;
 }
 /* Секція 2 */
+.about-us-list {
+  display: flex;
+  column-gap: 24px;
+}
+.about-us {
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+.about-us-item {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: flex-start;
+}
 .about-us-title {
   color: var(--main-color);
   font-size: 20px;
@@ -118,9 +197,31 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-top: 120px;
+  margin-bottom: 72px;
+  padding-top: 120px;
+}
+.team-list {
+  display: flex;
+  column-gap: 24px;
+  padding-bottom: 120px;
 }
 .team-list-item {
   background: #fff;
+  display: inline-flex;
+  padding-bottom: 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+.team-list-fullname-text-container {
+  display: flex;
+  width: 232px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 .team-list-fullname {
   color: var(--main-color);
@@ -129,6 +230,7 @@ body {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-top: 32px;
 }
 .team-list-text {
   color: var(--text-color);
@@ -137,14 +239,45 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 32px;
 }
 /* Секція 4 */
 .portfolio {
   background: #fff;
+  padding: 120px 0;
 }
+.portfolio-main-title {
+  color: var(--main-color);
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.portfolio-list {
+  list-style-type: none;
+  display: flex;
+  column-gap: 24px;
+  row-gap: 48px;
+  flex-wrap: wrap;
+  margin: 0;
+  padding-left: 0;
+}
+
 .portfolio-item {
-  border: 1px solid #e7e9fc;
-  background: #fff;
+  margin: 0;
+  width: 360px;
+}
+.portfolio-item-container {
+  display: flex;
+  padding: 32px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .portfolio-product {
@@ -165,6 +298,9 @@ body {
 /* Футтер */
 .footer {
   background: #2e2f42;
+  height: 312px;
+  padding-top: 101.5px;
+  padding-bottom: 100px;
 }
 .logotype-footer {
   color: var(--logo-button-color);
@@ -174,6 +310,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  padding-bottom: 15.5px;
 }
 .logo-second-word-footer {
   color: #f4f4fd;
@@ -191,4 +328,5 @@ body {
   font-weight: 400;
   line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
+  max-width: 265px;
 }
