--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,6 @@ body {
 .page-header-container {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #e7e9fc;
 }
 .page-navigation {
   display: flex;
@@ -78,7 +77,6 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;
 }
 .logotype {
   color: var(--logo-button-color);
@@ -88,9 +86,11 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 .page-header {
   background: #fff;
+  border-bottom: 1px solid #e7e9fc;
 }
 .menu-list {
   color: var(--main-color);
@@ -100,6 +100,8 @@ body {
   letter-spacing: 0.02em;
   display: flex;
   gap: 40px;
+}
+.menu-item {
   padding: 24px 0;
 }
 .menu-link {
@@ -208,11 +210,8 @@ body {
 }
 .team-list-item {
   background: #fff;
-  display: inline-flex;
-  padding-bottom: 0px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-list-fullname-text-container {
   display: flex;
@@ -280,6 +279,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .portfolio-product {
@@ -301,9 +301,8 @@ body {
 /* Футтер */
 .footer {
   background: #2e2f42;
-  height: 312px;
-  padding-top: 101.5px;
-  padding-bottom: 100px;
+
+  padding: 100px 0;
 }
 .logotype-footer {
   color: var(--logo-button-color);
@@ -313,7 +312,8 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  padding-bottom: 15.5px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .logo-second-word-footer {
   color: #f4f4fd;
