--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@ h2,
 h3,
 h4,
 h5,
-h6 p {
+h6,
+p {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -216,7 +217,6 @@ body {
 }
 .team-list-fullname-text-container {
   display: flex;
-  width: 232px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -232,7 +232,6 @@ body {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-top: 32px;
   margin-bottom: 8px;
 }
 .team-list-text {
@@ -242,7 +241,6 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
 }
 /* Секція 4 */
 .portfolio {
